- Fixed the width of the portfolio (issues on mobile)

--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,8 @@
 header {
   width: 100vw;
 }
+
+html, body {
+  width: 100%;
+  overflow-x: hidden;
+}
